{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "05304d25-b1e3-4737-b040-05f46da5987a",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "b742fb51-0922-4fd3-90ad-0d8108291247",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UpperRight",
                    "type": "Button",
                    "id": "eaf13fba-3e59-4d5b-baca-4829e75ecda4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LowerRight",
                    "type": "Button",
                    "id": "3d062d15-13d2-4e82-806c-aa9407dce56a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "c23b608b-03d1-44b1-a9fe-aea0e790b93a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LowerLeft",
                    "type": "Button",
                    "id": "7b128b90-5c2c-4b4c-aada-141547068444",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UpperLeft",
                    "type": "Button",
                    "id": "793e636f-661a-432e-9f51-f872d1d9e066",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpecialMove",
                    "type": "Button",
                    "id": "f4c15653-08e3-4c29-9127-df8bdbba4286",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a9bf6619-d298-4f66-b8a2-5aac56711971",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "221381ca-fd3e-466b-90c2-c2e0027546d0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpperRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34c2f940-d535-4d1d-9158-0c53c912f867",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LowerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4329e3be-3e99-443e-bc00-6b0b2fc27cc5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d90500b-dad4-486b-8048-5683af202a14",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LowerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f79d70fd-ef6a-445d-ba02-d647208790b9",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpperLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55183b32-a173-4683-a331-804f7d30b4ba",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}